Migrate mongodb to MongoDB Community Edition Image